jwt auth on all apis
