# main.go
@@ -7,7 +7,6 @@ import (
 	"os"
 
 	"github.com/dpolimeni/fiber_app/auth"
-	"github.com/golang-jwt/jwt"
 
 	"github.com/dpolimeni/fiber_app/common"
 	_ "github.com/dpolimeni/fiber_app/docs"
@@ -30,6 +29,7 @@ var DbClient = common.GetDB()
 // @license.url http://www.apache.org/licenses/LICENSE-2.0.html
 // @host localhost:8080
 // @BasePath /
+// @name <YourTokenName>
 func main() {
 
 	// Create a new Fiber instance
@@ -39,8 +39,6 @@ func main() {
 	people.SetupRoutes(app)
 	auth.SetUpAuthRoutes(app)
 	app.Get("/", HealthCheck)
-	//app.Get("/restricted", restricted)
-
 	password := os.Getenv("password")
 	connection := fmt.Sprintf("host=localhost port=5432 user=postgres dbname=gotest password=%s sslmode=disable", password)
 	client, err := ent.Open("postgres", connection)
@@ -66,20 +64,4 @@ func main() {
 // @Router / [get]
 func HealthCheck(c *fiber.Ctx) error {
 	return c.SendString("Hello, World!")
-}
-
-// JWT godoc
-// @Summary Show the status of server.
-// @Description Get test on base path.
-// @Tags Root Base
-// @Accept */*
-// @Produce json
-// @Success 200 {object} map[string]interface{}
-// @Router /restricted [get]
-func restricted(c *fiber.Ctx) error {
-	fmt.Println(c.Locals("user"))
-	user := c.Locals("user").(*jwt.Token)
-	claims := user.Claims.(jwt.MapClaims)
-	name := claims["name"].(string)
-	return c.SendString("Welcome " + name)
 }
